# nexus-edge-ai-core-next

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  Cargo.toml  README.md  nexus-edge-ai-core-next.code-workspace  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: nexus.example.toml  single-camera.toml  single-camera.youtube.toml
config/tiers/: t10.toml  t24.toml  t36.toml  t36s.toml  t64.toml
crates/nexus-bus/src/: lib.rs
crates/nexus-cloud-client/: Cargo.toml
crates/nexus-cloud-client/src/: actor_token.rs  csr.rs  dispatcher.rs  enrollment.rs  entitlements.rs  error.rs  jti_cache.rs  lib.rs  outbox.rs  sink.rs  trace_layer.rs  trace_uploader.rs  tunnel.rs
crates/nexus-cloud-client/tests/: actor_token.rs  dispatch_envelope.rs  enrollment_client_http.rs  replay_request_id.rs
crates/nexus-cloud-protocol/: Cargo.toml
crates/nexus-cloud-protocol/src/: lib.rs  v1.CHECKSUM  v1.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs
crates/nexus-engine/: Cargo.toml
crates/nexus-engine/src/: admin_auth.rs  admin_cli.rs  admin_cloud.rs  admin_network.rs  admin_runtime.rs  api.rs  audit_retention.rs  auth_bootstrap.rs  cloud_audit.rs  cloud_enroll.rs  cloud_sighting.rs  cloud_tunnel.rs  cold_read_cache.rs  cold_replicator.rs  delivery_reload.rs  engine_rpc.rs  entity_local_persist.rs  gpu.rs  main.rs  models_catalog.rs  oauth_sessions.rs  reconciler.rs  retention.rs  roster.rs  setup.rs  storage_safety.rs  system_metrics.rs  test_inject.rs  time_sync.rs  tls.rs  usb_watch.rs  visual_prompts_admin.rs
crates/nexus-engine/src/auth/: admin_audit.rs  bootstrap.rs  common_passwords.txt  lockout.rs  login.rs  mod.rs  oidc.rs  oidc_login.rs  oidc_role_map.rs  passwords.rs  require_role.rs  sessions.rs  users_admin.rs
crates/nexus-engine/src/discovery/: mod.rs  onvif.rs  onvif_media.rs  rtsp_probe.rs  scan.rs
crates/nexus-engine/src/network/: apply.rs  enumerate.rs  mod.rs  plan.rs
crates/nexus-inference/: Cargo.toml
crates/nexus-inference/src/: backends.rs  detectors.rs  encoder.rs  ensemble.rs  execution_providers.rs  lib.rs  pool.rs  router.rs  visual_prompts.rs  visual_store_sqlite.rs  worker_proto.rs  yolo.rs  yolo_world.rs  yoloe.rs  yoloe_promptfree.rs  yoloe_visual.rs
crates/nexus-inference/tests/: ensemble_scenario.rs  visual_prompt_e2e.rs  worker_process.rs  yolo_smoke.rs  yolo_world_smoke.rs  yoloe_promptfree_dispatch.rs  yoloe_smoke.rs
crates/nexus-pipeline/: Cargo.toml
crates/nexus-pipeline/src/: entity_sighting.rs  gate.rs  gst_clip_recorder.rs  lib.rs  post_roll.rs  preroll_ingester.rs  recorder.rs  source.rs  static_clear.rs  stats.rs  supervisor.rs
crates/nexus-pipeline/tests/: end_to_end_alert.rs
crates/nexus-probe/: Cargo.toml
crates/nexus-probe/src/: lib.rs  main.rs
crates/nexus-reid/: Cargo.toml
crates/nexus-reid/src/: lib.rs  ort_dinov2.rs
crates/nexus-reid/tests/: fp16_parity.rs
crates/nexus-rules/src/: lib.rs
crates/nexus-rules/tests/: rule_corpus.rs
crates/nexus-sinks/: Cargo.toml
crates/nexus-sinks/src/: backoff.rs  dispatcher.rs  lib.rs  policy.rs  webhook.rs
crates/nexus-sinks/tests/: dispatcher.rs  webhook.rs
crates/nexus-storage/: Cargo.toml
crates/nexus-storage-cloud/: Cargo.toml
crates/nexus-storage-cloud/src/: azure.rs  gdrive.rs  lib.rs  oauth.rs  onedrive.rs
crates/nexus-storage/src/: lan.rs  lib.rs  throttle.rs  token_crypto.rs
crates/nexus-store/migrations/: 0002_motion_clips.sql  0003_events_clip_cascade.sql  0004_storage_backends.sql  0005_runtime_settings.sql  0006_alert_sink_outbox.sql  0007_delivery_settings.sql  0008_rules_delivery_policy.sql  0009_audit_log.sql  0010_local_users.sql  0011_auth_refresh_tokens.sql  0012_visual_prompts.sql  0013_cloud_enrollment.sql  0014_storage_backends_azure_blob.sql  0016_cloud_enrollment_attach_replay.sql  0017_motion_clips_frame_size.sql  0018_entity_local_state.sql  0019_auth_refresh_idle.sql  0020_cloud_enrollment_server_cert.sql
crates/nexus-store/src/: audit.rs  cloud.rs  entity.rs  lib.rs  motion.rs  outbox.rs  sessions.rs  users.rs  visual_prompts.rs
crates/nexus-store/tests/: audit_schema.rs  motion_priority.rs  motion_schema.rs  outbox_schema.rs  sessions_schema.rs  users_schema.rs  visual_prompts_schema.rs
crates/nexus-telemetry/: Cargo.toml
crates/nexus-telemetry/src/: lib.rs
crates/nexus-tracker/src/: annotator.rs  lib.rs  motion.rs  static_object.rs
crates/nexus-types/src/: lib.rs
deploy/: Dockerfile  docker-compose.t10.yml  docker-compose.t24.yml  docker-compose.t36s.yml  docker-compose.yml
deploy/sudoers.d/: nexus-netd
deploy/systemd/: nexus-engine.service
deploy/udev/: 99-nexus-usb.rules  README.md
docs/: DEV_NOTES.md  INSTALL.md
models/: models-manifest.json
proto/: README.md  v1.json
scripts/: bootstrap.sh  install.sh  uninstall.sh
scripts/lib/: install-common.sh  release-pubkey.pem
tools/eval-labeler/: labeler.py
tools/models/: README.md  gen_yolo26n.py  gen_yolo_world.py  gen_yoloe.py  gen_yoloe_visual.py  requirements.txt  yolo_world_default_prompts.txt  yoloe_default_prompts.txt
ui/: index.html  package-lock.json  package.json  playwright.auth.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/e2e/: admin-audit.spec.ts  admin-delivery.spec.ts  admin-server.spec.ts  admin-users.spec.ts  auth.spec.ts  cameras.spec.ts  cascade-off-schedule.spec.ts  cascade-rule-disabled.spec.ts  dashboard.spec.ts  delivery.spec.ts  global-setup.ts  global-teardown.ts  happy-path.spec.ts  helpers.ts  rules-delivery-chip.spec.ts  rules.spec.ts  setup.spec.ts  tsconfig.json
ui/e2e/auth/: login-and-crud.spec.ts  tsconfig.json
ui/e2e/fixtures/: global-setup.ts  global-teardown.ts  helpers.ts  mock-webhook-server.mjs
ui/src/: index.css  main.ts  main.tsx  router.tsx
ui/src/api/: admin.ts  auth.ts  client.ts  config.ts  setup.ts  storage.ts  system.ts  types.ts
ui/src/components/: RouteErrorBoundary.tsx  cel-editor.tsx  clip-player.tsx  (+1 more)
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+83 files in other folders)
