[workspace]
resolver = "2"
members = [
    "crates/nexus-types",
    "crates/nexus-config",
    "crates/nexus-bus",
    "crates/nexus-telemetry",
    "crates/nexus-store",
    "crates/nexus-rules",
    "crates/nexus-tracker",
    "crates/nexus-inference",
    "crates/nexus-storage",
    "crates/nexus-storage-cloud",
    "crates/nexus-sinks",
    "crates/nexus-pipeline",
    "crates/nexus-engine",
    "crates/nexus-probe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-or-later"
authors = ["Nexus Edge AI <opensource@nexusedge.ai>"]
repository = "https://github.com/andboyer/nexus-edge-ai-core-next"
publish = false

[workspace.dependencies]
# Async + concurrency
tokio = { version = "1.41", features = ["full", "tracing"] }
# `sync` feature is required for BroadcastStream / WatchStream wrappers.
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = "1"

# Errors / IDs / time
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# IANA timezone DB. Used by M7 alert-delivery scheduler to resolve
# weekly schedules into the operator-configured local timezone.
chrono-tz = { version = "0.10", features = ["serde"] }

# Tracing / OTEL
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "fs",
] }

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
] }

# Rules
cel-interpreter = "0.10"

# Inference + image
# Pinned to =2.0.0-rc.10 because rc.11 / rc.12 reference an OrtApi field
# (`SessionOptionsAppendExecutionProvider_VitisAI`) that doesn't exist in the
# corresponding `ort-sys` build, even when no Vitis feature is selected.
# Revisit once upstream ships a working post-rc.10 release.
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "std",
    "load-dynamic",
    "ndarray",
] }
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }

# Media
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# IPC for worker-process backend
interprocess = { version = "2", features = ["tokio"] }
shared_memory = "0.12"
raw_sync = "0.1"
# MessagePack via serde is the wire codec on the parent <-> worker pipe.
# Picked over bincode 1.x because Detection.attributes is
# `serde_json::Map<String, serde_json::Value>` (deserialize_any) + uses
# `skip_serializing_if`; both require a self-describing format. msgpack is
# also compact enough for ~1 MB pixel buffers.
rmp-serde = "1.3"

# TS bindings
ts-rs = { version = "10", features = [
    "serde-compat",
    "uuid-impl",
    "chrono-impl",
] }

once_cell = "1"
url = { version = "2", features = ["serde"] }
tempfile = "3"

# Host metrics for `/api/v1/system/metrics` (M-Dashboard Phase 2).
# Cross-platform CPU / RAM / disk / process info. `default-features = false`
# strips out the Apple-only system-extensions probe which we don't need.
sysinfo = { version = "0.32", default-features = false, features = [
    "system",
    "disk",
] }

# Crypto — used by `nexus-storage::token_crypto` to encrypt OAuth
# refresh tokens at rest before they hit `storage_backends.config_json`
# (M2.2 Phase 2). Versions are RustCrypto-aligned: aes-gcm 0.10 +
# hkdf 0.12 + sha2 0.10 all share the same `digest 0.10` /
# `aead 0.5` ecosystem.
aes-gcm = "0.10"
hkdf = "0.12"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# HS256 JWT verifier for the admin → engine bearer (M2.2 Phase 2
# step 12). nexus-admin signs the token with `admin-auth.json:secret`
# and POSTs it to the engine on writes against `/api/v1/admin/*`.
# Version 9 is the current major; tracks aws-lc-rs underneath.
jsonwebtoken = "9"

# M6 Phase 2 Step 2.2 — argon2id password hashing for local user
# accounts. v0.5 defaults already match the OWASP-2024 baseline
# (m_cost=19 MiB, t_cost=2, p=1); we pin defaults and add a unit
# test that fires if a future bump weakens them.
argon2 = "0.5"

# HTTP client for cloud cold backends (M2.2 Phase 2 step 10).
# `rustls-tls` keeps us off openssl; `json` and `stream` are what
# we actually use against Google Drive / Microsoft Graph.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "http2",
] }

# Hex encoding for sha256 round-trip in cloud `exists()` checks.
hex = "0.4"

# M-Admin Phase 1B — camera discovery. `ipnet` parses CIDR strings
# and enumerates host iterators for the bounded-concurrency LAN
# sweep; `dashmap` backs the lock-free `Arc<DashMap<Uuid, Session>>`
# session registry the discovery handlers share with the
# eviction sweep. Both are pure Rust, dependency-light.
ipnet = "2"
dashmap = "6"
# Pull-parser used by `discovery::onvif` to read WS-Discovery
# `ProbeMatch` envelopes (we don't need a writer — the Probe
# request is a static envelope built from `format!`). Pure Rust,
# allocation-light.
quick-xml = "0.36"
# MD5 for RTSP Digest auth (RFC 2617). The RTSP Verify probe
# falls back to Digest when the camera answers DESCRIBE with
# 401 + `WWW-Authenticate: Digest`. RustCrypto-aligned with the
# existing sha2 / hkdf dep family.
md-5 = "0.10"

# HTTP mocking — only pulled in by `nexus-storage-cloud` tests so
# the Drive / OneDrive integration tests don't need real cloud
# accounts. Lives under [workspace.dependencies] so the version
# stays in lockstep across any other crates that grow tests later.
wiremock = "0.6"

# Internal
nexus-types = { path = "crates/nexus-types" }
nexus-config = { path = "crates/nexus-config" }
nexus-bus = { path = "crates/nexus-bus" }
nexus-telemetry = { path = "crates/nexus-telemetry" }
nexus-store = { path = "crates/nexus-store" }
nexus-rules = { path = "crates/nexus-rules" }
nexus-tracker = { path = "crates/nexus-tracker" }
nexus-inference = { path = "crates/nexus-inference" }
nexus-storage = { path = "crates/nexus-storage" }
nexus-storage-cloud = { path = "crates/nexus-storage-cloud" }
nexus-sinks = { path = "crates/nexus-sinks" }
nexus-pipeline = { path = "crates/nexus-pipeline" }
nexus-probe = { path = "crates/nexus-probe" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
debug = "line-tables-only"

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
inherits = "release"
debug = true
