[package]
name = "nexus-cloud-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Edge-side typed views of the proto/v1.json wire envelope. Mirror of the same crate in the cloud-console repo."

[lib]
name = "nexus_cloud_protocol"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
