[package]
name = "nexus-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
