[package]
name = "nexus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# `nexus-engine` is the primary binary; `nexus-doctor` is an op-tool.
# Pin the default so `cargo run -p nexus-engine` doesn't error with
# "could not determine which binary to run".
default-run = "nexus-engine"

[features]
default = []
gstreamer = ["nexus-pipeline/gstreamer"]
# M-Install Checkpoint 2 — feature proxies that forward into
# nexus-inference. The release pipeline (and the kitchen-sink Docker
# image) selects `ort,ep-cpu,ep-openvino,ep-cuda,ep-tensorrt`; lighter
# builds (LAN dev box, CI smoke) leave them off and pay zero cost.
ort = ["nexus-inference/ort"]
ep-cpu = ["nexus-inference/ep-cpu"]
ep-openvino = ["nexus-inference/ep-openvino"]
ep-cuda = ["nexus-inference/ep-cuda"]
ep-tensorrt = ["nexus-inference/ep-tensorrt"]
ep-coreml = ["nexus-inference/ep-coreml"]
ep-directml = ["nexus-inference/ep-directml"]
# M7 Step 6F2 — dev-only event-injection endpoint at
# `POST /api/v1/_test/inject_event`. Lets the Playwright e2e suite
# fire AlertEvents into the outbox without needing a live RTSP
# source + a deterministic-on-demand person track. NEVER enable in
# production builds — the endpoint sits OUTSIDE the admin-auth gate
# (so the e2e fixture can hit it under `auth.mode = "none"`) and
# would let any caller inject arbitrary events. Off by default.
test-injection = []
# M6 Phase 4 Step 4.5 — secure-by-default release builds. Forwards
# to `nexus-config/prod-auth` which removes `AuthMode::DevToken`
# from the enum entirely. The release pipeline (and Docker images
# that ship to customers) MUST flip this on; dev builds leave it
# off so the devtoken bootstrap path remains usable on a fresh
# clone.
prod-auth = ["nexus-config/prod-auth"]

[[bin]]
name = "nexus-engine"
path = "src/main.rs"

# `nexus-doctor` runs the INSTALL.md §9 smoke checks against a live
# engine on `http://localhost:8089`. Lives here (instead of in its
# own crate) because it shares no code with the engine but does
# share the engine's release-pipeline cadence (M-Install Checkpoint 1).
[[bin]]
name = "nexus-doctor"
path = "src/bin/doctor.rs"

[dependencies]
nexus-types = { workspace = true }
nexus-config = { workspace = true }
nexus-bus = { workspace = true }
nexus-telemetry = { workspace = true }
nexus-store = { workspace = true }
nexus-rules = { workspace = true }
nexus-tracker = { workspace = true }
nexus-inference = { workspace = true }
nexus-pipeline = { workspace = true }
nexus-storage = { workspace = true }
# M7 — alert delivery. Defines `AlertSink`, `SinkRegistry`, and the
# `SinkDispatcher` background task that drains `alert_sink_outbox`.
# nexus-engine just spawns the dispatcher in main.rs; the timer loop
# lives in `nexus_sinks::dispatcher` so it's library-testable.
# The `webhook` feature pulls reqwest + hmac + sha2 + hex for the
# JSON-POST sink — engines that ship without HTTP egress (rare in
# practice) can drop it.
nexus-sinks = { workspace = true, features = ["webhook"] }
# Cloud cold backends (Google Drive, OneDrive). Brings reqwest +
# OAuth + per-provider HTTP. The crate is always-on in nexus-engine
# even though LAN-only deployments never instantiate a cloud
# backend — splitting it into a feature flag would multiply the
# CI matrix without saving bytes on disk (reqwest+rustls is
# already in the dep graph via the cold-replicator's HTTP path).
nexus-storage-cloud = { workspace = true }
# Probe library for `--tier auto` (M-Install Checkpoint 1) and the
# `nexus-doctor` binary. Pure-Rust; pulls in serde + chrono only.
nexus-probe = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# HS256 bearer verifier for admin writes (M2.2 Phase 2 step 12).
jsonwebtoken = { workspace = true }

# M6 Phase 2 Step 2.2 — argon2id password hashing for local user
# accounts. Used by `auth::passwords::{hash_password, verify_password}`.
argon2 = { workspace = true }

# HTTP client for `nexus-doctor` (M-Install Checkpoint 1). Uses the
# `blocking` API so the doctor binary can stay sync — no tokio runtime
# required for an 8-step smoke test against `http://localhost:8089`.
reqwest = { workspace = true, features = ["blocking"] }

image = { workspace = true }
async-stream = "0.3"
sha2 = "0.10"

# M-Install Checkpoint 2 — token bytes for the auto-provisioned
# dev_token. `getrandom 0.3` is already in the dep graph
# transitively (via rand-using crates); pinning it here makes
# the dependency explicit instead of leaning on a transitive.
getrandom = "0.3"
# URL-safe base64 encoding for that token.
base64 = { workspace = true }

# M-Admin Phase 1B — camera discovery. CIDR parsing + host
# enumeration for the LAN sweep, and lock-free session registry
# shared with the eviction task.
ipnet = { workspace = true }
dashmap = { workspace = true }
# WS-Discovery ProbeMatch parser (M-Admin Phase 1B Step C).
quick-xml = { workspace = true }
# RTSP Digest auth (M-Admin Phase 1B Step D).
md-5 = { workspace = true }

# statvfs for the watermark sampler. Unix-only — non-unix builds
# fall back to a never-panic probe (see storage_safety.rs).
# `resource` enables getrlimit/setrlimit so we can raise the
# per-process file-descriptor cap at startup before the LAN
# discovery sweep opens ~3× concurrency sockets in parallel.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = [
    "fs",
    "resource",
] }

[dev-dependencies]
tempfile = { workspace = true }
base64 = { workspace = true }
# Used by audit_retention tests to backdate `audit_log.created_at`
# (Store has no public API for inserting at a specified historical
# timestamp — by design; sweeper tests are the only consumer).
sqlx = { workspace = true }
# M6 Phase 3 Step 3.1 — fake OIDC IdP for the discovery + JWKS
# fetch path. `wiremock` boots a real tokio HTTP server so we
# can validate the live HTTP code-path, not just a mocked
# in-memory fetcher.
wiremock = { workspace = true }
